data/derived/comb/progs/unify/prog7084.ml.out
Characters 107-108:
  if place <= 0 then (place+1, res + (mulByDigit l2 a))
                                                    ^
Error: This expression has type int * int
       but an expression was expected of type int list
